--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -48,6 +48,7 @@
        <script type="text/javascript" src="/js/jquery-1.11.1.js"></script>  <!-- change to jquer-1.11.1.min.js before going to production -->
        
   <script type="text/javascript" src="/js/jquery.cookie.js"></script>
+  <script type="text/javascript" src="/js/jquery.jeditable.js"></script>
 
 
   <!-- THEME: comment out default jquery-ui.js:
