--- a/templates/search/overdue.tmpl
+++ b/templates/search/overdue.tmpl
@@ -2,6 +2,7 @@
 <TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
 <script type="text/javascript" src="/js/overdue-1.4.js"></script>
+<script type="text/javascript" src="/js/common/internal-notes-lender-1.0.js"></script>
 
 
 <script type="text/javascript">
