--- a/templates/search/checkins.tmpl
+++ b/templates/search/checkins.tmpl
@@ -2,6 +2,7 @@
 <TMPL_INCLUDE NAME="submenu_lend.tmpl">
 
 <script type="text/javascript" src="/js/checkins-1.4.js"></script>
+<script type="text/javascript" src="/js/common/internal-notes-lender-1.0.js"></script>
 
 <script type="text/javascript">
 set_secondary_tab("menu_lend_checkins");
