--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -3,6 +3,7 @@
 
 <script type="text/javascript" src="/js/moment.min.js"></script>
 <script type="text/javascript" src="/js/respond-1.17.js"></script>
+<script type="text/javascript" src="/js/common/internal-notes-lender-1.0.js"></script>
 
 
 <script type="text/javascript">
