--- a/htdocs/css/fILL-library-accessible.1.0.css
+++ b/htdocs/css/fILL-library-accessible.1.0.css
@@ -416,6 +416,20 @@ zyes, zno {
     font-style: italic;
     font-weight: lighter;
 }
+
+/* Welcome page at-a-glance styles */
+table.at-a-glance-table {
+    background: #fff none repeat scroll 0 0;
+    border-collapse: collapse;
+    font-family: "Lucida Sans Unicode","Lucida Grande",sans-serif;
+    margin: 20px;
+    text-align: left;
+    width: 95%;
+}
+
+a.at-a-glance-link {
+    text-decoration: underline;
+}
 /***---End of new library client side CSS--**/
 
 
