new setting to allow libraries to change the number of table rows displayed per page, globally

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -262,6 +262,7 @@ $('document').ready(function(){
 	<div id="logout-button"><a href="?authen_logout=1" role="button" id="fill-button" class="library-style">log out</a></div>
 	<div id="patron-info">
 	  <p style="display:none"><TMPL_VAR NAME="username"></p>
+	  <p id="table_rows_per_page" style="display:none"><TMPL_VAR NAME="table_rows_per_page"></p>
 	  <p id="library_name"><TMPL_VAR NAME="library"></p>
 	  <p id="oid" style="display:none"><TMPL_VAR NAME="oid"></p>  <!-- used in a LOT of js files -->
 	  <input id="theme1" class="theme-chooser1" type="button" value="A" />
