--- a/templates/myaccount/settings.tmpl
+++ b/templates/myaccount/settings.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_myaccount.tmpl">
 
-<script type="text/javascript" src="/js/account-settings-1.1.js"></script>
+<script type="text/javascript" src="/js/account-settings-1.2.js"></script>
 
 <script type="text/javascript">
   <!--
@@ -216,6 +216,13 @@
 	    <input type="radio" name="lender_internal_notes" value='t'>Yes
 	    <input type="radio" name="lender_internal_notes" value='f' CHECKED>No
 	  </TMPL_IF>
+
+	  <h3>How many table rows per page would you like displayed?</h3>
+	  <p id="rowsPerPage" style="display:none"><TMPL_VAR name="rows_per_page"></p>
+	  <input type="radio" name="rows_per_page" value='-1'>All
+	  <input type="radio" name="rows_per_page" value='50'>50
+	  <input type="radio" name="rows_per_page" value='25'>25
+	  <input type="radio" name="rows_per_page" value='10'>10
 	  
 	  <h3>Do you want to print scannable patron barcodes on the date-due slips?</h3>
 	  
