--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -21,20 +21,15 @@
 <link type="text/css" rel="stylesheet" href="/css/fILL-media.1.0.css"/> 
 
 
-<link rel="stylesheet" type="text/css" href="/plugins/jquery-ui-1.11.1/jquery-ui.css"/>
-<link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/media/css/jquery.dataTables.css"/>
-<link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/extensions/TableTools/css/dataTables.tableTools.css"/>
+<!-- This is the new DataTables, with all of the required extensions built in
+     See https://datatables.net/download/ for info on building these files.
+  -->
+<link rel="stylesheet" type="text/css" href="/plugins/DataTables/datatables.min.css"/>
+<script type="text/javascript" src="/plugins/DataTables/datatables.min.js"></script>
 
-
-<script type="text/javascript" src="/js/jquery-1.11.1.js"></script>  <!-- change to jquery-1.11.1.min.js before going to production -->
 <script type="text/javascript" src="/js/jquery.cookie.js"></script>
 
-<script type="text/javascript" src="/plugins/jquery-ui-1.11.1/jquery-ui.js"></script>
 <script type="text/javascript" src="/js/menu-counters-1.1.js"></script>
-
-<!--  <script type="text/javascript" charset="utf-8" src="/plugins/DataTables-1.10.2/media/js/jquery.js"></script> -->  <!-- THIS WILL CONFLICT WITH jquery-1.11.1.js INCLUDED ABOVE -->
- <script type="text/javascript" charset="utf-8" src="/plugins/DataTables-1.10.2/media/js/jquery.dataTables.js"></script>
- <script type="text/javascript" src="/plugins/DataTables-1.10.2/extensions/TableTools/js/dataTables.tableTools.js"></script>
 
 <script type="text/javascript">
 $('document').ready(function(){
