--- a/templates/info/board-monthly.tmpl
+++ b/templates/info/board-monthly.tmpl
@@ -6,11 +6,7 @@
 </script>
 
 <script type="text/javascript" src="/js/report-board-1.0.js"></script>
-<!-- jquery-migrate is necessary for printElement to work.
-     see https://stackoverflow.com/questions/18354861/jquery-printelement-not-responding-at-all
--->
-<script type="text/javascript" src="/plugins/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="/plugins/jquery.printElement.min.js"></script>
+<script type="text/javascript" src="/plugins/printThis.js"></script>
 
 <link type="text/css" rel="stylesheet" media="all" href="/css/print-reports.1.0.css"/>
 
