--- a/templates/search/receiving.tmpl
+++ b/templates/search/receiving.tmpl
@@ -1,11 +1,10 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
-<!-- printElement uses jQuery .browser, which was removed in jQuery 1.9
-     jquery-migrate restores this functionality: -->
-<script type="text/javascript" src="/plugins/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="/plugins/jquery.printElement.min.js"></script>
+<script type="text/javascript" src="/plugins/printThis.js"></script>
+
 <script type="text/javascript" src="/js/receiving-1.5.js"></script>
+<script type="text/javascript" src="/js/common/internal-notes-borrower-1.0.js"></script>
 
 
 <script type="text/javascript">
@@ -63,7 +62,7 @@ $.ajaxSetup ({
 </div>
 
 <!-- slipbox and multiPrint are used by receiving.js to enable slip printing
-     (using .printElement() plugin, which lets us print the contents of a
+     (using .printThis() plugin, which lets us print the contents of a
      specific div -->
 <div id="slipbox"></div>
 <div id="multiPrint"></div>
