--- a/templates/search/holds.tmpl
+++ b/templates/search/holds.tmpl
@@ -2,6 +2,7 @@
 <TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
 <script type="text/javascript" src="/js/holds-1.5.js"></script>
+<script type="text/javascript" src="/js/common/internal-notes-borrower-1.0.js"></script>
 
 
 <script type="text/javascript">
