new-patron-request (internal) notes, which carry over to become borrower (internal) notes.  And delete all borrower/lender internal notes when moving to history.

--- a/htdocs/css/fILL-library-accessible.1.0.css
+++ b/htdocs/css/fILL-library-accessible.1.0.css
@@ -407,12 +407,12 @@ zyes, zno {
     padding: 0 !important;
 }
 
-.lender-note, .borrower-note {
+.lender-note, .borrower-note, .npr-note {
     font-style: normal;
     font-weight: bold;
 }
 
-.lender-note-empty, .borrower-note-empty {
+.lender-note-empty, .borrower-note-empty, npr-note-empty {
     font-style: italic;
     font-weight: lighter;
 }
