--- a/templates/search/renewals.tmpl
+++ b/templates/search/renewals.tmpl
@@ -17,46 +17,129 @@ $.ajaxSetup ({
 
 <div id="center" role="main">
 
-    <div id="waitDiv">
-      Loading... <img src="/wait.gif" alt="loading indicator">
+  <div id="waitDiv">
+    Loading... <img src="/wait.gif" alt="loading indicator">
+  </div>
+  
+  <div id="tabs">
+    <ul>
+      <li><a href="#tabs-1">Ask for renewal</a></li>
+      <li><a href="#tabs-2">Waiting for answer</a></li>
+      <li><a href="#tabs-3">Renewed</a></li>
+      <li><a href="#tabs-4">Could not renew</a></li>
+    </ul>
+    
+    <div id="tabs-1">
+      <table id="renewals-table-ask" class="row-border">
+	<thead>
+	  <tr>
+	    <th>gid</th>
+	    <th>cid</th>
+	    <th>ID</th>
+	    <th>Title</th>
+	    <th>Author</th>
+	    <th>Patron</th>
+	    <th>Last update</th>
+	    <th>Lender</th>
+	    <th>Lender (ID)</th>
+	    <th>Status</th>
+	    <th>Message</th>
+	    <th>Renewal</th>
+	  </tr>
+	</thead>
+	<tbody></tbody>
+	<tfoot>
+	  <tr><td colspan="12">As you ask for renewals, the status is updated here.  The next time you return to the Renewals tab, they will be sorted into the proper tables.</td></tr>
+	</tfoot>
+      </table>
     </div>
 
-    <div id="myDiv">
-      <div id="mylistDiv">
-	<table id="renewals-table" class="row-border">
-	  <thead>
-	    <tr>
-	      <th>gid</th>
-	      <th>cid</th>
-	      <th>ID</th>
-	      <th>Title</th>
-	      <th>Author</th>
-	      <th>Patron</th>
-	      <th>Last update</th>
-	      <th>Lender</th>
-	      <th>Lender (ID)</th>
-	      <th>Status</th>
-	      <th>Message</th>
-	      <th>Renewal</th>
-	    </tr>
-	  </thead>
-	  <tbody></tbody>
-	  <tfoot>
-	    <tr><td colspan="12">As you ask for renewals, items are removed from this list.  You can see the status of all of your active ILLs in the "Current ILLs" screen.</td></tr>
-	  </tfoot>
-	</table>
-      </div>
+    <div id="tabs-2">
+      <table id="renewals-table-waiting" class="row-border">
+	<thead>
+	  <tr>
+	    <th>gid</th>
+	    <th>cid</th>
+	    <th>ID</th>
+	    <th>Title</th>
+	    <th>Author</th>
+	    <th>Patron</th>
+	    <th>Last update</th>
+	    <th>Lender</th>
+	    <th>Lender (ID)</th>
+	    <th>Status</th>
+	    <th>Message</th>
+	    <th>Renewal</th>
+	  </tr>
+	</thead>
+	<tbody></tbody>
+	<tfoot>
+	  <tr><td colspan="12">As you cancel for renewals, items are removed from this list.</td></tr>
+	</tfoot>
+      </table>
     </div>
 
-    <div id="instructions" class="tone-box">
+    <div id="tabs-3">
+      <table id="renewals-table-ok" class="row-border">
+	<thead>
+	  <tr>
+	    <th>gid</th>
+	    <th>cid</th>
+	    <th>ID</th>
+	    <th>Title</th>
+	    <th>Author</th>
+	    <th>Patron</th>
+	    <th>Last update</th>
+	    <th>Lender</th>
+	    <th>Lender (ID)</th>
+	    <th>Status</th>
+	    <th>Message</th>
+	    <th>Renewal</th>
+	  </tr>
+	</thead>
+	<tbody></tbody>
+	<tfoot>
+	  <tr><td colspan="12">These items have been renewed by the lenders, and now have updated due dates.</td></tr>
+	</tfoot>
+      </table>
+    </div>
+
+    <div id="tabs-4">
+      <table id="renewals-table-cannot-renew" class="row-border">
+	<thead>
+	  <tr>
+	    <th>gid</th>
+	    <th>cid</th>
+	    <th>ID</th>
+	    <th>Title</th>
+	    <th>Author</th>
+	    <th>Patron</th>
+	    <th>Last update</th>
+	    <th>Lender</th>
+	    <th>Lender (ID)</th>
+	    <th>Status</th>
+	    <th>Message</th>
+	    <th>Renewal</th>
+	  </tr>
+	</thead>
+	<tbody></tbody>
+	<tfoot>
+	  <tr><td colspan="12">Lenders could not renew these items; they will need to be returned.</td></tr>
+	</tfoot>
+      </table>
+    </div>
+    
+  </div> <!-- tabs -->
+
+  <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-
-      <p>These are items that your patrons currently have out.</p>
-      <p>A status of 'Renew' means that you have asked the lender for a renewal.</p>
-      <p>'Renew-Answer | Ok' means that the lender has allowed the renewal.</p>
-      <p>If the renewal was not accepted, the status will be 'Renew-Answer | No-renewal'</p>
-
-    </div>
+    
+    <p>These are items that your patrons currently have out.</p>
+    <p>A status of 'Renew' means that you have asked the lender for a renewal.</p>
+    <p>'Renew-Answer | Ok' means that the lender has allowed the renewal.</p>
+    <p>If the renewal was not accepted, the status will be 'Renew-Answer | No-renewal'</p>
+    
+  </div>
 
 </div>
 
