rotations - extra information for PLSB on item checkin

--- a/templates/rotations/receiving.tmpl
+++ b/templates/rotations/receiving.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_rotations.tmpl">
 
-<script type="text/javascript" src="/js/rotations-1.1.js"></script>
+<script type="text/javascript" src="/js/rotations-1.2.js"></script>
 
 <script type="text/javascript">
 set_secondary_tab("menu_rotations_receiving");
@@ -28,6 +28,7 @@ $.ajaxSetup ({
 		  Scan a barcode: <input id="barcode" type="text" name="barcode">
 		  <input id="scanOk" type="button" value="Ok" class="library-style">
 		  <span id="circCount" />
+		  <div id="circHistory" />
 		</p>
 		<br/>
 	      </form>
