info about the update

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -94,6 +94,26 @@
       <h2>Updates</h2>
       <hr>
       <div id="accordion">
+	<h3>Tuesday 21st June 2016 Release notes</h3>
+	<div>
+	  <p>New features:
+	    <ul>
+	      <li>At-a-glance.  The Home page now shows the areas in fILL where requests may need your attention.</li>
+	      <li>Search timer.  There is now a time limit on waiting for search results.  Searches finish when either the timer runs out or all zServers have responded.</li>
+	      <li>Internal notes.  You can add notes to yourself to a particular request (as a lender) or request group (as a borrower).</li>
+	      <li># rows in tables.  You can set how many rows you'd like the fILL tables to display from your Account > Other settings page.</li>
+	    </ul>
+	  </p>
+	  <p>Major updates:
+	    <ul>
+	      <li>Borrowing > Renewals is now split into four tabs: Ask for renewal, Waiting for answer, Renewed, and Could not renew.</li>
+	      <li>You can sort tables on multiple columns.  Click the heading of the first column, and then shift-click on other columns.</li>
+	      <li>Printing / Copying / Save-as-Excel / Save-as-PDF now take advantage of HTML5 abilities, and no longer require Flash.</li>
+	    </ul>
+	  </p>
+	  <p>See the updated Librarian's Guide for more information, examples of usage, minor updates and bug fixes.</p>
+	</div>
+	
 	<h3>Thursday 10th December 2015 Release notes</h3>
 	<div>
 	  <p>This is mainly a bug-fix update, including fixes for
