patron management is no longer necessary because of direct authentication against home ILS

--- a/templates/submenu_myaccount.tmpl
+++ b/templates/submenu_myaccount.tmpl
@@ -16,14 +16,16 @@
       Library barcodes
       </a>
     </li>
+<!-- DEPRECATED: 2016-06.  No longer necessary (patrons now authenticate
+     directly against home ILS, so no need for patron management in fILL)
+     *** The patron management stuff will go away ***
 
     <li id="menu_myaccount_patrons">
-      <!-- Note that this is invoking a different cgi script... -->
       <a href="/cgi-bin/myaccount.cgi?rm=myaccount_patrons_form">
 	Patron list
       </a>
     </li>
-
+-->
     <li id="menu_myaccount_acquisitions">
       <a href="/cgi-bin/myaccount.cgi?rm=myaccount_acquisitions_form">
       Wish list
