--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -253,7 +253,7 @@ $('document').ready(function(){
     <p>&nbsp;</p>
     <div id="header" class="header-library">
       <div id="header-left">
-	<div id="fill-logo"><a href="/"><img id="theme-logo" src="/img/fill-lib-logo.png" alt="fill"/></a></div>
+	<div id="fill-logo"><a href="/cgi-bin/info.cgi?rm=welcome"><img id="theme-logo" src="/img/fill-lib-logo.png" alt="fill"/></a></div>
 	<div id="fill-tagline"><p>connecting libraries, serving patrons.</p></div>
       </div>
 
