...and another bit for the wait-for-search-to-complete message

--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -95,7 +95,7 @@ $('document').ready(function(){
     
     <div id="pager"></div>
     <div id="navi"></div>
-    
+    <p id="result-instructions">Enter some keywords to begin searching.</p>
     <div id="results"></div>
 
   </div> <!-- end of recordview -->
