--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -36,8 +36,8 @@
     
     <p><strong>Library fILL</strong></p>
     <ul>
+      <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=fILL_-_Librarians_Guide_-_2016_June.pdf">fILL Librarian's Guide - 2016 June</a></li>
       <li><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></li>
-      <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=fILL_-_User_Guide.pdf">fILL User's Guide</a></li>
       <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=fILL_brochure.pdf">Manitoba Libraries Conference 2012 fILL brochure (3-fold)</a></li>
       <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=Rotations_Manager_guide.pdf">Rotations Manager guide</a></li>
     </ul>
