changed the yellow-box notice to point users to the updated guide

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -6,7 +6,8 @@
   <div id="main-left" class="tone-box" >
 
     <div class="alert-box" >
-      <p>See the Updates section, below, for a comprehensive list of changes and new features.</p>
+      <p>fILL updated!</p>
+      <p>See the completely new Librarian's Guide in the Quick Links, below.</p>
     </div>
     <hr>
     <div id="zserver">
