toggle discoverability of individual Spruce libraries through admin interface

--- a/templates/admin/submenu_z3950.tmpl
+++ b/templates/admin/submenu_z3950.tmpl
@@ -4,22 +4,28 @@
   <ul>
     <li id="menu_zserver_test">
       <a href="/cgi-bin/admin.cgi?rm=zserver_test">
-      Test a zServer
+	Test a zServer
       </a>
     </li>
-
+    
     <li id="menu_zserver_settings">
       <a href="/cgi-bin/admin.cgi?rm=zserver_settings">
-      zServer settings
+	zServer settings
       </a>
     </li>
 
     <li id="menu_zserver_pazpar_control">
       <a href="/cgi-bin/admin.cgi?rm=zserver_pazpar_control">
-      Pazpar control
+	Pazpar control
       </a>
     </li>
 
+    <li id="menu_zserver_spruce">
+      <a href="/cgi-bin/admin.cgi?rm=zserver_spruce">
+	Spruce libraries
+      </a>
+    </li>
+    
   </ul>
 </div>
 
