--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -38,7 +38,7 @@ $.ajaxSetup ({
   <div class="innerLeft tone-box">
     <h3>Canada Post Shipping Tool</h3>
     <div id="shippingtool">
-      <p>Clicking on this link will open the <a href="http://www.clatoolbox.ca/EOE_SCE_Prod/forms/" target="_blank" style="text-decoration : underline;">Canada Post Shipping Tool</a> in a new tab or window.</p>
+      <p>Clicking on this link will open the <a href="http://www.libraryshippingtool.ca/" target="_blank" style="text-decoration : underline;">new LibraryShippingTool.ca</a> in a new tab or window.</p>
     </div>
   </div>
   
