--- a/templates/public/test.tmpl
+++ b/templates/public/test.tmpl
@@ -1,20 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head><title><TMPL_VAR name="pagetitle"></title>
-</head>
-<body class="example_alt_pagination">
+<html lang="<TMPL_VAR name='lang'>">
+  <head>
+    <title><TMPL_VAR name="pagetitle"></title>
+    <link rel="stylesheet" type="text/css" href="/plugins/DataTables/datatables.min.css"/>
+    <script type="text/javascript" src="/plugins/DataTables/datatables.min.js"></script>
+    <script type="text/javascript" src="/js/i18n.js"></script>
 
-<div id="container">
+    <!-- To handle multilingual, we'll need a variable to hold the JSON string passed in
+	 (which contains the ML strings), and (for convenience) another to hold the
+	 parsed JSON data structure.
+      -->
+    <script type="text/javascript">
+      var langDataRaw = '<TMPL_VAR name="lang_data">';
+      var langData;
+    </script>
 
+    <script type="text/javascript">
+      $('document').ready(function() {
+        i18n_setText();
+      });
+    </script>
+  </head>
 
-<div id="content">
-  <div id="main-info-left" class="tone-box" role="main">
-    <h2>TEST TEST TEST</h2>
-  </div><!--main-info-left-->
-</div><!--div id content-->
-
-
-</div><!-- div id container-->
-</body>
+  <body class="example_alt_pagination">
+    <div id="container">
+      
+      <div>
+	<p>Username: <TMPL_VAR name="username"></p>
+	<p>Barcode: <TMPL_VAR name="barcode"></p>
+	<p>OID: <TMPL_VAR name="oid"></p>
+	<p>Library: <TMPL_VAR name="library"></p>
+	<TMPL_VAR name="lang_data">
+      </div>
+      
+      <div id="content">
+	<div id="main-info-left" class="tone-box" role="main">
+	  <h2 id="main-info-left-h2">TESTING</h2>
+	  <p id="id-of-para"></p>
+	  <p id="id-of-second-para"></p>
+	</div><!--main-info-left-->
+      </div><!--div id content-->
+      
+    </div><!-- div id container-->
+  </body>
 </html>
 
