--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -6,24 +6,17 @@
 <div id="content">
 
   <div id="main-info-right" class="tone-box" role="main">
-        <h1>About</h1>
-        <p>fILL is the interlibrary loan management system for all Manitoba public libraries. It connects your local library to the millions of items available in Manitoba&rsquo;s libraries.</p>
-        <p>If you are unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it online and have it delivered to your local public library.
-        </p>
-        <p>
-        fILL enables library patrons to quickly and easily search the catalogues of many Manitoba public libraries at the same time. When you find the item that you'd like to request, fILL prepares the interlibrary loan request for your public library and the local library staff to try to borrow the item from the lending library  for you.
-        </p>
-        <h3>Privacy</h3>
-        <p>
-        fILL does not keep a record of your search history nor  does it keep a record of request transactions after borrowed items are returned. Logging into your account is necessary in order for your library to validate the request; some non-identifying data may be retained for statistical purposes.
-        </p>
-
+    <h1 id="about-heading">About</h1>
+    <p id="about-p1">fILL is the interlibrary loan management system for all Manitoba public libraries. It connects your local library to the millions of items available in Manitoba&rsquo;s libraries.</p>
+    <p id="about-p2">If you are unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it online and have it delivered to your local public library.</p>
+    <p id="about-p3">fILL enables library patrons to quickly and easily search the catalogues of many Manitoba public libraries at the same time. When you find the item that you'd like to request, fILL prepares the interlibrary loan request for your public library and the local library staff to try to borrow the item from the lending library  for you.</p>
+    <h3 id="about-privacy">Privacy</h3>
+    <p id="about-privacy-p1">fILL does not keep a record of your search history nor  does it keep a record of request transactions after borrowed items are returned. Logging into your account is necessary in order for your library to validate the request; some non-identifying data may be retained for statistical purposes.</p>
   </div><!--main-info-right-->
 
-<div id="aside-img-left" role="complementary">
-        <img src='/img/fill-about.jpg' alt="Brown haired girl with a pony tail, reading a book in the park"/>
-            <p class="note">Image care of <a href="https://www.flickr.com/photos/swanksalot/2715407049/">Seth Anderson</a></p>
-
+  <div id="aside-img-left" role="complementary">
+    <img src='/img/fill-about.jpg' alt="Brown haired girl with a pony tail, reading a book in the park"/>
+    <p class="note"><span id="image-attribution">Image care of</span> <a href="https://www.flickr.com/photos/swanksalot/2715407049/">Seth Anderson</a></p>
   </div>
 
 </div><!--div id content-->
