--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <TMPL_IF name="lang">
-  <html lang=<TMPL_VAR name="lang">
+  <html lang=<TMPL_VAR name="lang">>
 <TMPL_ELSE>
   <html lang="en">
 </TMPL_IF>
       
-<head><title><TMPL_VAR name="pagetitle"></title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <title><TMPL_VAR name="pagetitle"></title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!--[if lt IE 9]>
+  <!--[if lt IE 9]>
   <script>
     var e = ("abbr,article,aside,audio,canvas,datalist,details," +
       "figure,footer,header,main,mark,menu,meter,nav,output," +
@@ -18,40 +19,35 @@
       document.createElement(e[i]);
     }
   </script>
-<![endif]-->
+  <![endif]-->
 
-<link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css"/>
-<link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css"/>
-<link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-public-default.css"/>
-<link type="text/css" rel="stylesheet" href="/css/fILL-media.1.0.css"/> 
+  <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css"/>
+  <link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css"/>
+  <link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-public-default.css"/>
+  <link type="text/css" rel="stylesheet" href="/css/fILL-media.1.0.css"/> 
 
 
-<!-- This is the new DataTables, with all of the required extensions built in
+  <!-- This is the new DataTables, with all of the required extensions built in
      See https://datatables.net/download/ for info on building these files.
   -->
-<link rel="stylesheet" type="text/css" href="/plugins/DataTables/datatables.min.css"/>
-<script type="text/javascript" src="/plugins/DataTables/datatables.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="/plugins/DataTables/datatables.min.css"/>
+  <script type="text/javascript" src="/plugins/DataTables/datatables.min.js"></script>
 
-<script type="text/javascript" src="/js/jquery.cookie.js"></script>
+  <script type="text/javascript" src="/js/jquery.cookie.js"></script>
 
-<script type="text/javascript" src="/js/menu-counters-1.2.js"></script>
+  <script type="text/javascript" src="/js/menu-counters-1.2.js"></script>
 
-<script type="text/javascript" src="/js/i18n.js"></script>
-<!-- To handle multilingual, we'll need a variable to hold the JSON string passed in
+  <script type="text/javascript" src="/js/i18n.js"></script>
+  <!-- To handle multilingual, we'll need a variable to hold the JSON string passed in
      (which contains the ML strings), and (for convenience) another to hold the
      parsed JSON data structure.  It has to be here (not in i18n.js) because it is
      a template variable passed in from perl....
   -->
-<script type="text/javascript">
-  var langDataRaw = '<TMPL_VAR ESCAPE="JS" name="lang_data">';
-  var langData;
-</script>
 
+  <script type="text/javascript">
+  $('document').ready(function(){
 
-<script type="text/javascript">
-$('document').ready(function(){
-
-    i18n_setText();
+    i18n_load();
     setFontSizeFromCookies();
 
     $('#incrFont').click(function () {
@@ -106,10 +102,10 @@ $('document').ready(function(){
 	$("#filldev").show();
     }
 
-});
-</script>
+  });
+  </script>
 
-<script type="text/javascript">
+  <script type="text/javascript">
 
   function set_primary_tab(tab_id) {
     document.getElementById(tab_id).className='current_tab';
@@ -156,19 +152,19 @@ $('document').ready(function(){
     });
   } 
 
-</script>
+  </script>
 
-<!-- Google analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <!-- Google analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-21021258-3', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-21021258-3', 'auto');
+    ga('send', 'pageview');
 
-</script>
+  </script>
 
 </head>
 <body class="example_alt_pagination">
@@ -206,6 +202,9 @@ $('document').ready(function(){
         <p><a href="/cgi-bin/public.cgi?rm=contact_form"><strong><TMPL_VAR name="library"></strong></a></p>
         <div id="oid" style="display:none"><TMPL_VAR name="oid"></div>
         <div id="barcode" style="display:none"><TMPL_VAR name="barcode"></div>
+	<TMPL_IF name="template">
+	  <div id="template" style="display:none"><TMPL_VAR name="template"></div>
+	</TMPL_IF>
 	<input id="incrFont" class="public-style" type="button" value="+A" /><input id="resetFont" class="public-style" type="button" value="A" /><input id="decrFont" class="public-style" type="button" value="-A" />
     </div>
   </div>
