--- a/templates/public/test2.tmpl
+++ b/templates/public/test2.tmpl
@@ -1,24 +1,28 @@
 <TMPL_INCLUDE NAME="header.tmpl">
+<script type="text/javascript">
+    set_primary_tab("menu_test");
+</script>
 
-  <div id="content">
 
-    <div id="main-info-left" class="tone-box" role="main">
-      <h2 id="main-info-left-h2">TESTING</h2>
-      <p id="id-of-para"></p>
-      <p id="id-of-second-para"></p>
-    </div><!--main-info-left-->
+<div id="content">
 
-    <div style="clear: both;"></div> <!-- clear the floatiness -->
+  <div id="main-info-left" class="tone-box" role="main">
+    <h2 id="main-info-left-h2">TESTING</h2>
+    <p id="id-of-para"></p>
+    <p id="id-of-second-para"></p>
+  </div><!--main-info-left-->
 
-    <div id="aside-img-left" role="complementary">
-      <p>Username: <TMPL_VAR name="username"></p>
-      <p>Barcode: <TMPL_VAR name="barcode"></p>
-      <p>OID: <TMPL_VAR name="oid"></p>
-      <p>Library: <TMPL_VAR name="library"></p>
-      <TMPL_VAR name="lang_data">
-    </div>
+  <div style="clear: both;"></div> <!-- clear the floatiness -->
 
-  </div><!--div id content-->
+  <div id="aside-img-left" role="complementary">
+    <p>Username: <TMPL_VAR name="username"></p>
+    <p>Barcode: <TMPL_VAR name="barcode"></p>
+    <p>OID: <TMPL_VAR name="oid"></p>
+    <p>Library: <TMPL_VAR name="library"></p>
+    <TMPL_VAR name="lang_data">
+  </div>
+
+</div><!--div id content-->
   
 
 <TMPL_INCLUDE NAME="footer.tmpl">
