--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -81,7 +81,7 @@ $('document').ready(function(){
 
 <div id="aside-img-welcome" class="tone-box">
     <img src='/img/fill-search.jpg' alt="open book"/><br />
-    <p class="note">Image care of <a href="http://pixabay.com/en/book-open-pages-library-books-92771/">kshelton</a>
+    <p class="note"><span id="img-care-of">Image care of </span><a href="http://pixabay.com/en/book-open-pages-library-books-92771/">kshelton</a>
 
     <p id="welcome-text">Welcome to the Manitoba public libraries' interlibrary loan system.</p>
 </div>
@@ -107,7 +107,7 @@ $('document').ready(function(){
       <div id="home-library" style="display:none">
 	<table>
 	  <tr>
-	    <td>Home library location:</td>
+	    <td><p id="home-lib-text">Home library location:</p></td>
 	    <td><p id="home-library-location"></p></td>
 	</tr>
 	</table>
@@ -172,7 +172,7 @@ $('document').ready(function(){
 	<a href="?rm=registration_form" type="button" role="button" id="fill-button" class="public-style">Sign up now</a>
       </div>
 -->
-      <p>If you cannot remember your user name or password, please contact your local public library.</p>
+      <p id="cannot-remember">If you cannot remember your user name or password, please contact your local public library.</p>
 
     </div> <!--div class login-footer -->
     <input type="hidden" value="/cgi-bin/public.cgi?rm=search_form;submit=Log%20in" name="destination">
