a quick test of i18n on the public/current page

--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -23,6 +23,9 @@ $.ajaxSetup ({
 </div><!--div id content-->
 
 <!-- passed in on template load, used in .js -->
-<div id="pid" style="display:none"><TMPL_VAR name="pid"></div> 
+<div id="pid" style="display:none"><TMPL_VAR name="pid"></div>
+
+<!-- just to test i18n, temporarily... corresponding entry in PostgreSQL -->
+<div id="DC-testing" style="display:none"></div>
 
 <TMPL_INCLUDE NAME="footer.tmpl">
